# HermesWith

./: .env.example  .gitignore  Dockerfile  Dockerfile.control-plane  Dockerfile.runtime  GITHUB_DESCRIPTION.md  README.md  README_CN.md  TASKS.md  TRACK_A1.md  TRACK_A2.md  TRACK_B.md  TRACK_C.md  TRACK_D.md  TRACK_E.md  cli.py  docker-compose.yml  pyproject.toml  run_parallel_dev.sh  trajectory_samples.jsonl
agent/: skill_commands.py
docs/: ARCHITECTURE.md
examples/: e2e_test.py  mvp_demo.py  run_mvp_demo.sh  test_websocket.py  verify_llm_path.py  verify_tools.py
gateway/: run.py
hermeswith/: __init__.py  cli.py  config.py  main.py
hermeswith/api/: __init__.py  dependencies.py  middleware.py  router.py
hermeswith/control_plane/: __init__.py  api.py  goal_queue.py
hermeswith/integrations/: __init__.py  clawith_client.py  sync_service.py
hermeswith/persistence/: __init__.py  database.py  migrate.py  models.py
hermeswith/runtime/: __init__.py  agent_runtime.py  intervention.py  main.py  memory_adapter.py  ws_client.py
hermeswith/security/: __init__.py  audit.py  auth.py  encryption.py  rate_limit.py
hermeswith/services/: __init__.py  agent_service.py  output_service.py  task_service.py
hermeswith/tools/: __init__.py  runtime_tools.py
scripts/: prepare-build.sh  start-all.sh  stop-all.sh
skills/software-development/sdc/: README.md  (+1 more)
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_mvp_demo.py
tests/integration/: __init__.py  test_api.py  test_goal_api.py
tests/unit/: __init__.py  test_agent_runtime.py  test_memory_adapter.py
(+1 files in other folders)
