[project]
name = "hermeswith"
version = "0.1.0"
description = "Hermes Brain + OpenClaw Body = Autonomous Digital Workforce"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "openai>=1.12.0",
    "anthropic>=0.25.0",
    "websockets>=12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hermeswith*"]
exclude = ["vendor*", "tests*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
